samples/_failures_safe/1761264807_04d53a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_662f9eb8.c:132: error: expected ‘;’, ‘,’ or ‘)’ at end of input
